--- a/sicurezza.htm
+++ b/sicurezza.htm
@@ -251,9 +251,7 @@
 
     <main>
         <section id="hero">
-            <h1>Benvenuto su Cyber Aware</h1>
-            <p>La tua guida per scoprire, prevenire e affrontare le minacce informatiche.</p>
-            <a href="#soluzioni-sicurezza" class="cta-btn">Esplora le Soluzioni di Sicurezza</a>
+            <h1>sicurezza</h1>
         </section>
 
         <!-- Sezione Soluzioni di Sicurezza -->
